--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -306,6 +306,12 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
+.nav-tabs {
+  border-bottom: 1px solid #000;
+  text-align: center;
+  margin-bottom: 50px;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 .nav-tabs > li {
   float: none;
   display: inline-block;
@@ -314,30 +320,11 @@ body {
   zoom: 1;
   /* hasLayout ie7 trigger */
 }
-.nav-tabs {
-  text-align: center;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-.nav-tabs {
-  border-bottom: 1px solid #000;
-  text-align: center;
-  margin-bottom: 50px;
-}
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:focus,
-.nav-tabs > li.active > a:hover {
-  border-width: 0;
-}
 .nav-tabs > li > a {
-  border: none;
+  border: none !important;
+  border-width: 0 !important;
   color: #000;
   text-transform: uppercase;
-}
-.nav-tabs > li.active > a,
-.nav-tabs > li > a:hover {
-  border: none;
-  color: #e05300 !important;
-  background: transparent !important;
 }
 .nav-tabs > li > a::after {
   content: "";
@@ -350,12 +337,26 @@ body {
   transition: all 250ms ease 0s;
   transform: scale(0);
 }
-.nav-tabs > li.active > a::after,
-.nav-tabs > li:hover > a::after {
+.nav-tabs > li.active > a,
+.nav-tabs > li > a:hover {
+  border: none;
+  color: #e05300 !important;
+  background: transparent !important;
+}
+.nav-tabs > li:hover > a::after,
+.nav-tabs > li.active > a::after {
   transform: scale(1);
 }
-.tab-nav > li > a::after {
-  background: #21527d none repeat scroll 0% 0%;
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:focus,
+.nav-tabs > li.active > a:hover {
+  border: none !important;
+  border-width: 0 !important;
+}
+.container-dark .nav-tabs {
+  border-bottom: 1px solid #fff;
+}
+.container-dark .nav-tabs > li > a {
   color: #fff;
 }
 /*# sourceMappingURL=grayscale.css.map */
