--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -340,57 +340,56 @@ body {
     webkit-tap-highlight-color: fade(white, 20%);
 }
 
-
-// Center tabs
-.nav-tabs > li {
-  float:none;
-  display:inline-block;
-  *display:inline; /* ie7 fix */
-   zoom:1; /* hasLayout ie7 trigger */
-}
-.nav-tabs {
-  text-align:center;
-  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
-
-
+// Main nav tabs styles.
 .nav-tabs {
   border-bottom: 1px solid #000;
   text-align: center;
   margin-bottom: 50px;
+  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+  & > li {
+    // Additional centering considerations.
+    float: none;
+    display: inline-block;
+    *display: inline; /* ie7 fix */
+    zoom: 1; /* hasLayout ie7 trigger */
+    & > a {
+      border: none !important;
+      border-width: 0 !important;
+      color: #000;
+      text-transform: uppercase;
+    }
+    // Add bar space under tabs.
+    & > a::after {
+      content: "";
+      background: @primary;
+      height: 5px;
+      position: absolute;
+      width: 100%;
+      left: 0px;
+      bottom: -1px;
+      transition: all 250ms ease 0s; transform: scale(0);
+    }
+    // Ensure bar space is active for active items and is animated.
+    &.active > a,
+    & > a:hover { 
+      border: none;
+      color: @primary !important;
+      background: transparent !important;
+    }
+    &:hover > a::after,
+    &.active > a::after {
+      transform: scale(1);
+    }
+  }
+  // Misc border cleanup.
+  & > li.active > a, > li.active > a:focus, > li.active > a:hover {
+    border: none !important;
+    border-width: 0 !important;
+  }
 }
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:focus,
-.nav-tabs > li.active > a:hover {
-  border-width: 0;
-}
-.nav-tabs > li > a {
-  border: none;
-  color: #000;
-  text-transform: uppercase;
-}
-.nav-tabs > li.active > a,
-.nav-tabs > li > a:hover { 
-  border: none;
-  color: @primary !important;
-  background: transparent !important;
-}
-.nav-tabs > li > a::after {
-  content: "";
-  background: @primary;
-  height: 5px;
-  position: absolute;
-  width: 100%;
-  left: 0px;
-  bottom: -1px;
-  transition: all 250ms ease 0s; transform: scale(0);
-}
-.nav-tabs > li.active > a::after,
-.nav-tabs > li:hover > a::after {
-  transform: scale(1);
-}
-.tab-nav > li > a::after {
-  background: #21527d none repeat scroll 0% 0%;
-  color: #fff;
-}
+.container-dark .nav-tabs {
+  border-bottom: 1px solid #fff;
+  & > li > a {
+    color: #fff;
+  }
+} 
