--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -383,8 +383,7 @@ body {
   }
   // Misc border cleanup.
   & > li.active > a, > li.active > a:focus, > li.active > a:hover {
-    border: none !important;
-    border-width: 0 !important;
+ rder-width: 0 !important;
   }
 }
 .container-dark .nav-tabs {
