Adjust some class names.

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -386,7 +386,7 @@ body {
  rder-width: 0 !important;
   }
 }
-.container-dark .nav-tabs {
+.section-dark .nav-tabs {
   border-bottom: 1px solid #fff;
   & > li > a {
     color: #fff;
