--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -352,10 +352,10 @@ body {
 .nav-tabs > li.active > a:hover {
   rder-width: 0 !important;
 }
-.container-dark .nav-tabs {
+.section-dark .nav-tabs {
   border-bottom: 1px solid #fff;
 }
-.container-dark .nav-tabs > li > a {
+.section-dark .nav-tabs > li > a {
   color: #fff;
 }
 /*# sourceMappingURL=grayscale.css.map */
