--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -151,11 +151,11 @@ a:focus {
 .btn-circle {
   width: 70px;
   height: 70px;
-  margin-top: 15px;
-  padding: 7px 16px;
+  margin: 15px 8px;
+  padding: 16px;
   border: 2px solid white;
   border-radius: 100% !important;
-  font-size: 40px;
+  font-size: 25px;
   color: white;
   background: transparent;
   -webkit-transition: background 0.3s ease-in-out;
@@ -166,7 +166,7 @@ a:focus {
 .btn-circle:focus {
   outline: none;
   color: white;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.25);
 }
 .btn-circle i.animated {
   -webkit-transition-property: -webkit-transform;
@@ -215,31 +215,31 @@ a:focus {
 .content-section {
   padding-top: 100px;
 }
-.download-section {
+.light-section {
   width: 100%;
-  padding: 50px 0;
   color: #000;
   background-color: #fff;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+  background-image: url("../img/ecailles.png");
+  background-repeat: repeat !important;
+}
+.dark-section {
+  width: 100%;
+  color: #fff;
+  background-color: #000;
 }
 #map {
   width: 100%;
   height: 200px;
   margin-top: 100px;
 }
+.content-section {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
 @media (min-width: 767px) {
   .content-section {
-    padding-top: 250px;
-  }
-  .download-section {
-    padding: 100px 0;
-  }
-  #map {
-    height: 400px;
-    margin-top: 250px;
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
 }
 .btn {
@@ -307,7 +307,7 @@ body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
 .nav-tabs {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #fff;
   text-align: center;
   margin-bottom: 50px;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -323,7 +323,7 @@ body {
 .nav-tabs > li > a {
   border: none !important;
   border-width: 0 !important;
-  color: #000;
+  color: #fff;
   text-transform: uppercase;
 }
 .nav-tabs > li > a::after {
@@ -352,10 +352,14 @@ body {
 .nav-tabs > li.active > a:hover {
   rder-width: 0 !important;
 }
-.section-dark .nav-tabs {
-  border-bottom: 1px solid #fff;
+.light-section .nav-tabs {
+  border-bottom: 1px solid #000;
 }
-.section-dark .nav-tabs > li > a {
-  color: #fff;
+.light-section .nav-tabs > li > a {
+  color: #000;
+}
+#chartdiv {
+  width: 100%;
+  height: 500px;
 }
 /*# sourceMappingURL=grayscale.css.map */
