--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -160,42 +160,43 @@ a {
 }
 
 .btn-circle {
-    width: 70px;
-    height: 70px;
-    margin-top: 15px;
-    padding: 7px 16px;
-    border: 2px solid white;
-    border-radius: 100% !important;
-    font-size: 40px;
+  width: 70px;
+  height: 70px;
+  margin: 15px 8px;
+  padding: 16px;
+  border: 2px solid white;
+  border-radius: 100% !important;
+  font-size: 25px;
+  color: white;
+  background: transparent;
+  -webkit-transition: background .3s ease-in-out;
+  -moz-transition: background .3s ease-in-out;
+  transition: background .3s ease-in-out;
+  &:hover,
+  &:focus {
+    outline: none;
     color: white;
-    background: transparent;
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-    &:hover,
-    &:focus {
-        outline: none;
-        color: white;
-        background: fade(white, 10%);
-    }
+    background: fade(white, 25%);
+  }
+  i.animated {
+    -webkit-transition-property: -webkit-transform;
+    -webkit-transition-duration: 1s;
+    -moz-transition-property: -moz-transform;
+    -moz-transition-duration: 1s;
+
+  }
+  &:hover {
     i.animated {
-        -webkit-transition-property: -webkit-transform;
-        -webkit-transition-duration: 1s;
-        -moz-transition-property: -moz-transform;
-        -moz-transition-duration: 1s;
+      -webkit-animation-name: pulse;
+      -moz-animation-name: pulse;
+      -webkit-animation-duration: 1.5s;
+      -moz-animation-duration: 1.5s;
+      -webkit-animation-iteration-count: infinite;
+      -moz-animation-iteration-count: infinite;
+      -webkit-animation-timing-function: linear;
+      -moz-animation-timing-function: linear;
     }
-    &:hover {
-        i.animated {
-            -webkit-animation-name: pulse;
-            -moz-animation-name: pulse;
-            -webkit-animation-duration: 1.5s;
-            -moz-animation-duration: 1.5s;
-            -webkit-animation-iteration-count: infinite;
-            -moz-animation-iteration-count: infinite;
-            -webkit-animation-timing-function: linear;
-            -moz-animation-timing-function: linear;
-        }
-    }
+  }
 }
 
 @-webkit-keyframes pulse {
@@ -236,16 +237,17 @@ a {
     padding-top: 100px;
 }
 
-.download-section {
-    width: 100%;
-    padding: 50px 0;
-    color: #000;
-    // background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-    background-color: #fff;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+.light-section {
+  width: 100%;
+  color: #000;
+  background-color: #fff;
+  background-image: url("../img/ecailles.png");
+  background-repeat: repeat !important;
+}
+.dark-section {
+  width: 100%;
+  color: #fff;
+  background-color: #000;
 }
 
 #map {
@@ -254,19 +256,13 @@ a {
     margin-top: 100px;
 }
 
-@media(min-width:767px) {
-    .content-section {
-        padding-top: 250px;
-    }
-
-    .download-section {
-        padding: 100px 0;
-    }
-
-    #map {
-        height: 400px;
-        margin-top: 250px;
-    }
+.content-section {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  @media(min-width:767px) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 .btn {
@@ -342,7 +338,7 @@ body {
 
 // Main nav tabs styles.
 .nav-tabs {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #fff;
   text-align: center;
   margin-bottom: 50px;
   font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -355,7 +351,7 @@ body {
     & > a {
       border: none !important;
       border-width: 0 !important;
-      color: #000;
+      color: #fff;
       text-transform: uppercase;
     }
     // Add bar space under tabs.
@@ -386,9 +382,15 @@ body {
  rder-width: 0 !important;
   }
 }
-.section-dark .nav-tabs {
-  border-bottom: 1px solid #fff;
+.light-section .nav-tabs {
+  border-bottom: 1px solid #000;
   & > li > a {
-    color: #fff;
+    color: #000;
   }
 } 
+
+
+#chartdiv {
+	width	: 100%;
+	height	: 500px;
+}	
