--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -39,19 +39,20 @@ p {
 }
 
 a {
-    color: @primary;
-    -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-    &:hover,
-    &:focus {
-        text-decoration: none;
-        color: darken(@primary,20%);
-    }
+  color: @primary;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    color: darken(@primary,20%);
+  }
 }
 
 .light {
     font-weight: 400;
+    font-size: 80%;
 }
 
 .navbar-custom {
@@ -74,9 +75,16 @@ a {
         &:focus {
             outline: none;
         }
+        i {
+          visibility: hidden;
+          color: lighten(@primary,10%);
+          opacity: 0;
+          transition: visibility 1s, opacity 1s;
+        }
     }
     a {
         color: white;
+        // text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     }
     .nav {
         li {
@@ -118,48 +126,67 @@ a {
             padding: 0;
             background: black;
             border-bottom: 1px solid fade(white, 30%);
+            .navbar-brand i {
+              visibility: visible;
+              opacity: 1;
+            }
         }
     }
 }
 
 .intro {
-    display: table;
-    width: 100%;
-    height: auto;
-    padding: 100px 0;
-    text-align: center;
-    color: white;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
-    background-color: black;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    .intro-body {
-        display: table-cell;
-        vertical-align: middle;
-        .brand-heading {
-            font-size: 40px;
-        }
-        .intro-text {
-            font-size: 18px;
-        }
-    }
+  display: table;
+  width: 100%;
+  height: auto;
+  padding: 100px 0;
+  text-align: center;
+  color: white;
+  // text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  // background: url(../img/P1010660.jpg) no-repeat bottom center scroll;
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), url(../img/threerock.jpg);
+  // background-attachment: fixed;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  .intro-inner {
+    //padding: 20px;
+    //background-color: rgba(0,0,0,0.3);
+  }
+  .intro-body {
+    display: table-cell;
+    vertical-align: middle;
     @media(min-width:768px) {
-        height: 100%;
-        padding: 0;
-        .intro-body {
-            .brand-heading {
-                font-size: 100px;
-            }
-            .intro-text {
-                font-size: 26px;
-            }
-        }
+      display: block;
+      position: absolute;
+      bottom: 10%;
+      left: 0;
+      right: 0;
     }
+    .brand-heading {
+      font-size: 40px;
+    }
+    .intro-text {
+      font-size: 18px;
+    }
+  }
+  @media(min-width:768px) {
+    height: 100%;
+    padding: 0;
+    .intro-body {
+      .brand-heading {
+        font-size: 100px;
+      }
+      .intro-text {
+        font-size: 26px;
+      }
+    }
+  }
 }
 
 .btn-circle {
+  // box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
   width: 70px;
   height: 70px;
   margin: 15px 8px;
@@ -175,8 +202,8 @@ a {
   &:hover,
   &:focus {
     outline: none;
-    color: white;
-    background: fade(white, 25%);
+    color: #fff;
+    background: fade(@primary, 60%);
   }
   i.animated {
     -webkit-transition-property: -webkit-transform;
@@ -198,38 +225,32 @@ a {
     }
   }
 }
-
 @-webkit-keyframes pulse {
-    0 {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-
-    50% {
-        -webkit-transform: scale(1.2);
-        transform: scale(1.2);
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
+  0 {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
 }
-
 @-moz-keyframes pulse {
     0 {
-        -moz-transform: scale(1);
-        transform: scale(1);
+      -moz-transform: scale(1);
+      transform: scale(1);
     }
-
     50% {
-        -moz-transform: scale(1.2);
-        transform: scale(1.2);
+      -moz-transform: scale(1.2);
+      transform: scale(1.2);
     }
-
     100% {
-        -moz-transform: scale(1);
-        transform: scale(1);
+      -moz-transform: scale(1);
+      transform: scale(1);
     }
 }
 
@@ -243,6 +264,7 @@ a {
   background-color: #fff;
   background-image: url("../img/ecailles.png");
   background-repeat: repeat !important;
+  background-attachment: fixed;
 }
 .dark-section {
   width: 100%;
