--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -71,10 +71,9 @@ a:focus {
   outline: none;
 }
 .navbar-custom .navbar-brand i {
-  visibility: hidden;
   color: #ff6b14;
   opacity: 0;
-  transition: visibility 1s, opacity 1s;
+  transition: opacity 1s;
 }
 .navbar-custom a {
   color: white;
@@ -119,7 +118,6 @@ a:focus {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
   .navbar-custom.top-nav-collapse .navbar-brand i {
-    visibility: visible;
     opacity: 1;
   }
 }
@@ -140,6 +138,7 @@ a:focus {
 .intro .intro-body {
   display: table-cell;
   vertical-align: middle;
+  transition: opacity 1s;
 }
 @media (min-width: 768px) {
   .intro .intro-body {
@@ -247,11 +246,6 @@ a:focus {
   width: 100%;
   color: #fff;
   background-color: #000;
-}
-#map {
-  width: 100%;
-  height: 200px;
-  margin-top: 100px;
 }
 .content-section {
   padding-top: 50px;
