--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -2,40 +2,35 @@
 @import "mixins.less";
 
 body {
-    width: 100%;
-    height: 100%;
-    font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: white;
-    background-color: black;
+  width: 100%;
+  height: 100%;
+  font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
+  color: white;
+  background-color: black;
 }
 
 html {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0 0 35px;
-    text-transform: uppercase;
-    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    letter-spacing: 1px;
+h1, h2, h3, h4, h5, h6 {
+  margin: 0 0 35px;
+  text-transform: uppercase;
+  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px;
 }
 
 p {
-    margin: 0 0 25px;
-    font-size: 18px;
-    line-height: 1.5;
-    @media(min-width:768px) {
-        margin: 0 0 35px;
-        font-size: 20px;
-        line-height: 1.6;
-    }
+  margin: 0 0 25px;
+  font-size: 18px;
+  line-height: 1.5;
+  @media(min-width:768px) {
+    margin: 0 0 35px;
+    font-size: 20px;
+    line-height: 1.6;
+  }
 }
 
 a {
@@ -51,87 +46,84 @@ a {
 }
 
 .light {
-    font-weight: 400;
-    font-size: 80%;
+  font-weight: 400;
+  font-size: 80%;
 }
 
 .navbar-custom {
-    margin-bottom: 0;
-    border-bottom: 1px solid fade(white, 30%);
-    text-transform: uppercase;
-    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: black;
-    .navbar-toggle {
-        padding: 4px 6px;
-        font-size: 16px;
-        color: white;
+  margin-bottom: 0;
+  border-bottom: 1px solid fade(white, 30%);
+  text-transform: uppercase;
+  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+  background-color: black;
+  .navbar-toggle {
+    padding: 4px 6px;
+    font-size: 16px;
+    color: white;
+    &:focus,
+    &:active {
+      outline: none;
+    }
+  }
+  .navbar-brand {
+    font-weight: 700;
+    &:focus {
+      outline: none;
+    }
+    i {
+      color: lighten(@primary,10%);
+      opacity: 0;
+      transition: opacity 1s;
+    }
+  }
+  a {
+    color: white;
+  }
+  .nav {
+    li {
+      a {
+        -webkit-transition: background .3s ease-in-out;
+        -moz-transition: background .3s ease-in-out;
+        transition: background .3s ease-in-out;
+        &:hover {
+          color: fade(white, 80%);
+          outline: none;
+          background-color: transparent;
+        }
         &:focus,
         &:active {
-            outline: none;
+          outline: none;
+          background-color: transparent;
         }
-    }
-    .navbar-brand {
-        font-weight: 700;
-        &:focus {
-            outline: none;
+      }
+      &.active {
+        outline: none;
+        a {
+          background-color: fade(@primary, 90%);
+          &:hover {
+            color: white;
+          }
         }
-        i {
-          visibility: hidden;
-          color: lighten(@primary,10%);
-          opacity: 0;
-          transition: visibility 1s, opacity 1s;
-        }
+      }
     }
-    a {
-        color: white;
-        // text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  }
+  @media(min-width:768px) {
+    padding: 20px 0;
+    border-bottom: none;
+    letter-spacing: 1px;
+    background: transparent;
+    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+    transition: background .5s ease-in-out,padding .5s ease-in-out;
+    &.top-nav-collapse {
+      padding: 0;
+      background: black;
+      border-bottom: 1px solid fade(white, 30%);
+      .navbar-brand i {
+        opacity: 1;
+      }
     }
-    .nav {
-        li {
-            a {
-                -webkit-transition: background .3s ease-in-out;
-                -moz-transition: background .3s ease-in-out;
-                transition: background .3s ease-in-out;
-                &:hover {
-                    color: fade(white, 80%);
-                    outline: none;
-                    background-color: transparent;
-                }
-                &:focus,
-                &:active {
-                    outline: none;
-                    background-color: transparent;
-                }
-            }
-            &.active {
-                outline: none;
-                a {
-                    background-color: fade(@primary, 90%);
-                    &:hover {
-                        color: white;
-                    }
-                }
-            }
-        }
-    }
-    @media(min-width:768px) {
-        padding: 20px 0;
-        border-bottom: none;
-        letter-spacing: 1px;
-        background: transparent;
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
-        &.top-nav-collapse {
-            padding: 0;
-            background: black;
-            border-bottom: 1px solid fade(white, 30%);
-            .navbar-brand i {
-              visibility: visible;
-              opacity: 1;
-            }
-        }
-    }
+  }
 }
 
 .intro {
@@ -157,6 +149,7 @@ a {
   .intro-body {
     display: table-cell;
     vertical-align: middle;
+    transition: opacity 1s;
     @media(min-width:768px) {
       display: block;
       position: absolute;
@@ -255,7 +248,7 @@ a {
 }
 
 .content-section {
-    padding-top: 100px;
+  padding-top: 100px;
 }
 
 .light-section {
@@ -272,12 +265,6 @@ a {
   background-color: #000;
 }
 
-#map {
-    width: 100%;
-    height: 200px;
-    margin-top: 100px;
-}
-
 .content-section {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -288,74 +275,74 @@ a {
 }
 
 .btn {
-    text-transform: uppercase;
-    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 400;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    border-radius: 0;
+  text-transform: uppercase;
+  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 400;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  border-radius: 0;
 }
 
 .btn-default {
+  border: 1px solid @primary;
+  color: @primary;
+  background-color: transparent;
+  &:hover,
+  &:focus {
     border: 1px solid @primary;
-    color: @primary;
-    background-color: transparent;
-    &:hover,
-    &:focus {
-        border: 1px solid @primary;
-        outline: none;
-        color: black;
-        background-color: @primary;
-    }
+    outline: none;
+    color: black;
+    background-color: @primary;
+  }
 }
 
 ul.banner-social-buttons {
-    margin-top: 0;
-    @media(max-width:1199px) {
-        margin-top: 15px;
+  margin-top: 0;
+  @media(max-width:1199px) {
+    margin-top: 15px;
+  }
+  @media(max-width:767px) {
+    li {
+      display: block;
+      margin-bottom: 20px;
+      padding: 0;
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
-    @media(max-width:767px) {
-        li {
-            display: block;
-            margin-bottom: 20px;
-            padding: 0;
-            &:last-child {
-                margin-bottom: 0;
-            }
-        }
-    }
+  }
 }
 
 footer {
-    padding: 50px 0;
-    p {
-        margin: 0;
-    }
+  padding: 50px 0;
+  p {
+    margin: 0;
+  }
 }
 
 ::-moz-selection {
-    text-shadow: none;
-    background: #fcfcfc;
-    background: fade(white, 20%);
+  text-shadow: none;
+  background: #fcfcfc;
+  background: fade(white, 20%);
 }
 
 ::selection {
-    text-shadow: none;
-    background: #fcfcfc;
-    background: fade(white, 20%);
+  text-shadow: none;
+  background: #fcfcfc;
+  background: fade(white, 20%);
 }
 
 img::selection {
-    background: transparent;
+  background: transparent;
 }
 
 img::-moz-selection {
-    background: transparent;
+  background: transparent;
 }
 
 body {
-    webkit-tap-highlight-color: fade(white, 20%);
+  webkit-tap-highlight-color: fade(white, 20%);
 }
 
 // Main nav tabs styles.
