Experiments with shading on intro.

--- a/css/main.css
+++ b/css/main.css
@@ -167,7 +167,7 @@ a:focus {
   .intro .intro-body {
     display: block;
     position: absolute;
-    bottom: 40%;
+    bottom: 5%;
     left: 0;
     right: 0;
   }
@@ -183,6 +183,7 @@ a:focus {
 }
 @media (min-width: 768px) {
   .intro {
+    box-shadow: inset 0px -300px 150px 0px rgba(0, 0, 0, 0.8);
     background: url(../img/P1020492.jpg) no-repeat bottom center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
