--- a/less/main.less
+++ b/less/main.less
@@ -244,10 +244,10 @@ a {
     i.animated {
       -webkit-animation-name: pulse;
       -moz-animation-name: pulse;
-      -webkit-animation-duration: 1.5s;
-      -moz-animation-duration: 1.5s;
-      -webkit-animation-iteration-count: infinite;
-      -moz-animation-iteration-count: infinite;
+      -webkit-animation-duration: 0.2s;
+      -moz-animation-duration: 0.2s;
+      -webkit-animation-iteration-count: 1;
+      -moz-animation-iteration-count: 1;
       -webkit-animation-timing-function: linear;
       -moz-animation-timing-function: linear;
     }
@@ -258,10 +258,10 @@ a {
   text-transform: uppercase;
   font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 400;
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
   transition: all .3s ease-in-out;
-  border-radius: 0;
+  border-radius: 3px;
 }
 
 .btn-default {
@@ -272,7 +272,7 @@ a {
   &:focus {
     border: 1px solid @primary;
     outline: none;
-    color: black;
+    color: #fff;
     background-color: @primary;
   }
 }
@@ -347,12 +347,12 @@ body {
     & > a::after {
       content: "";
       background: @primary;
-      height: 5px;
+      height: 4px;
       position: absolute;
       width: 100%;
       left: 0px;
       bottom: -1px;
-      transition: all 250ms ease 0s; transform: scale(0);
+      transition: all 100ms ease 0s; transform: scale(0);
     }
     // Ensure bar space is active for active items and is animated.
     &.active > a,
