--- a/less/main.less
+++ b/less/main.less
@@ -380,8 +380,9 @@ body {
 
 
 #chartdiv {
-	width	: 100%;
-	height	: 500px;
+	width: 100%;
+	height: 500px;
+  margin-bottom: 2em;
 }	
 
 // Pulse animations (mainly for buttons).
