--- a/less/main.less
+++ b/less/main.less
@@ -32,6 +32,9 @@ p {
     line-height: 1.6;
   }
 }
+.larger {
+  font-size: 120% !important;
+}
 
 a {
   color: @primary;
@@ -160,7 +163,6 @@ a {
   background-image: url("../img/subtle_bg/real_cf.png");
   background-repeat: repeat !important;
   background-attachment: fixed;
-  // box-shadow: inset 0px -30px 20px #000;
   .intro-body {
     display: table-cell;
     vertical-align: middle;
@@ -179,12 +181,13 @@ a {
       font-size: 18px;
     }
   }
-  .intro-photo-caption {
+  .intro-extra {
     display: none;
   }
   @media(min-width: @mobile-break) {
-    box-shadow: inset 0px 100px 100px 0px rgba(0,0,0,0.4);
     background: url(../img/P1020492.jpg) no-repeat bottom center scroll;
+    box-shadow: inset 0px -75px 75px 0px rgba(0,0,0,1);
+    background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -203,13 +206,16 @@ a {
         font-size: 26px;
       }
     }
-    .intro-photo-caption {
+    .intro-extra {
       padding: 15px;
       display: block;
       position: absolute;
-      bottom: 0;
+      bottom: 30px;
       right: 0;
       margin: 0;
+      a, a:hover {
+        color: #fff;
+      }
     }
   }
 }
@@ -329,7 +335,7 @@ body {
 .nav-tabs {
   border-bottom: 1px solid #fff;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 2em;
   font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
   & > li {
     // Additional centering considerations.
@@ -337,6 +343,7 @@ body {
     display: inline-block;
     *display: inline; /* ie7 fix */
     zoom: 1; /* hasLayout ie7 trigger */
+    margin-right: 1em;
     & > a {
       border: none !important;
       border-width: 0 !important;
@@ -356,7 +363,7 @@ body {
     }
     // Ensure bar space is active for active items and is animated.
     &.active > a,
-    & > a:hover { 
+    & > a:hover {
       border: none;
       color: @primary !important;
       background: transparent !important;
@@ -376,14 +383,17 @@ body {
   & > li > a {
     color: #000;
   }
-} 
+}
+.tab-content {
+  margin-bottom: 2em;
+}
 
 
 #chartdiv {
 	width: 100%;
 	height: 500px;
   margin-bottom: 2em;
-}	
+}
 
 // Pulse animations (mainly for buttons).
 @-webkit-keyframes pulse {
