--- a/less/variables.less
+++ b/less/variables.less
@@ -3,3 +3,8 @@
 @primary: #e05300;
 
 @mobile-break: 768px;
+
+@text-gap: 2em;
+
+@base-font: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+@header-font: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
