--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   width: 100%;
   height: 100%;
-  font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
   background-color: black;
 }
@@ -16,9 +16,9 @@ h4,
 h5,
 h6 {
   margin: 0 0 35px;
-  text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700;
+  font-variant: small-caps;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
   letter-spacing: 1px;
 }
 p {
@@ -60,9 +60,10 @@ a:focus {
   border-bottom: 1px solid #fff;
   text-align: center;
   margin-bottom: 2em;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .nav-tabs > li {
+  font-size: 16px;
   float: none;
   display: inline-block;
   *display: inline;
@@ -101,7 +102,7 @@ a:focus {
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:focus,
 .nav-tabs > li.active > a:hover {
-  rder-width: 0 !important;
+  border-width: 0 !important;
 }
 .light-section .nav-tabs {
   border-bottom: 1px solid #000;
@@ -147,6 +148,8 @@ a:focus {
   font-size: 40px;
 }
 .intro .intro-body .intro-text h2 {
+  font-weight: 400;
+  text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.7);
   margin-bottom: 0.5em;
   margin-left: 1em;
 }
@@ -155,6 +158,7 @@ a:focus {
   color: #fff !important;
 }
 .intro .intro-body .intro-text h2 a i.fa {
+  text-shadow: none;
   visibility: hidden;
   margin-left: 0.3em;
   color: #ff6b14;
@@ -224,7 +228,7 @@ a:focus {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: black;
 }
 .navbar-custom .navbar-toggle {
@@ -238,6 +242,7 @@ a:focus {
 }
 .navbar-custom .navbar-brand {
   font-weight: 700;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 .navbar-custom .navbar-brand:focus {
   outline: none;
@@ -295,7 +300,7 @@ a:focus {
 }
 .btn {
   text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -304,6 +309,7 @@ a:focus {
 }
 .btn-default {
   border: 1px solid #e05300;
+  margin: 0 1em 2em 0;
   color: #e05300;
   background-color: transparent;
 }
@@ -313,6 +319,9 @@ a:focus {
   outline: none;
   color: #fff;
   background-color: #e05300;
+}
+.btn-default i.fa {
+  margin-right: 0.5em;
 }
 .btn-circle {
   width: 70px;
@@ -355,6 +364,42 @@ footer {
 }
 footer p {
   margin: 0;
+}
+.image-thumb-wrap {
+  margin-bottom: 2em;
+}
+.image-thumb-wrap .image-thumb img {
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  max-width: 100%;
+  height: auto;
+  width: auto;
+}
+.image-thumb-wrap .image-thumb img:hover {
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+}
+.image-thumb-wrap .image-thumb .image-title {
+  padding: 7px;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  border-radius: 0px 0px 3px 3px;
+  -moz-border-radius: 0px 0px 3px 3px;
+  -webkit-border-radius: 0px 0px 3px 3px;
+  -khtml-border-radius: 0px 0px 3px 3px;
+  background-clip: padding-box;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+}
+.image-thumb-wrap .image-thumb .image-title a,
+.image-thumb-wrap .image-thumb .image-title a:hover {
+  color: #fff;
 }
 ::-moz-selection {
   text-shadow: none;
