Add pro section content.

--- a/less/main.less
+++ b/less/main.less
@@ -55,6 +55,9 @@ a {
   font-size: 80%;
   color: darken(#fff, 30%);
 }
+.pull-right {
+  margin: 0 0 2em 3em;
+}
 
 // Navbar styles.
 .navbar-custom {
