--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,9 @@ a:focus {
   font-size: 80%;
   color: #b3b3b3;
 }
+.pull-right {
+  margin: 0 0 2em 3em;
+}
 .navbar-custom {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
